# qsardb-client-repo-SSbD-toolbox

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
src/qsardb_client/: __init__.py  cli.py  client.py  io_utils.py  schemas.py  server.py
src/qsardb_client/archive/: __init__.py  cargos.py  downloader.py  qdb_parser.py
src/qsardb_client/capabilities/: __init__.py  matrix.py
src/qsardb_client/chemistry/: __init__.py  standardize.py
src/qsardb_client/export/: __init__.py  tabular.py
src/qsardb_client/local/: __init__.py  toolkit.py
src/qsardb_client/predictor/: __init__.py  catalog.py  remote.py  response_parser.py
src/qsardb_client/repository/: __init__.py  manifest.py  oai.py
src/qsardb_client/run/: __init__.py  summary.py
tests/: test_archive_cargos.py  test_archive_downloader.py  test_capability_matrix.py  test_chemistry_standardize.py  test_cli.py  test_documentation_examples.py  test_export_tabular.py  test_local_toolkit.py  test_package_contract.py  test_predictor_catalog.py  test_predictor_response_parser.py  test_qdb_parser.py  test_remote_predictor.py  test_repository_manifest.py  test_repository_oai.py  test_run_summary.py  test_schemas.py  test_server.py
