[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qsardb-client"
version = "0.1.0"
description = "QsarDB-native Python client schemas and integration layer."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "httpx",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
qsardb-client = "qsardb_client.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
